Change file storage

--- a/assets/css/partials/_layout.scss
+++ b/assets/css/partials/_layout.scss
@@ -6,6 +6,7 @@ body {
   background-color: #ffffff;
   height: 100%;
   display: grid;
+  font-family: sans serif, serif, monospace, auto;
   grid-template-columns: auto;
   grid-template-rows: min-content 1fr min-content;
 }
