--- a/lib/aif_albums_web/live/album_live/album_spread_component.html.leex
+++ b/lib/aif_albums_web/live/album_live/album_spread_component.html.leex
@@ -1,4 +1,5 @@
 <div>
-  <%= img_tag @current_album_spread.image_url, width: "100%",
+  <%= img_tag album_spread_image_url(@album.aifid, @current_album_spread.aifid),
+      style: "max-width: 100%; max-height: 75vh;",
       alt: "Album spread #{@current_album_spread.aifid}" %>
 </div>
