Update homepage layout

--- a/lib/aif_albums_web/live/page_live.html.leex
+++ b/lib/aif_albums_web/live/page_live.html.leex
@@ -9,9 +9,9 @@
       digitize the albums and make them available online.
     </p>
   </div>
-  <div class="albums-grid align-items-center">
+  <div class="albums-grid">
     <%= for album <- @albums do %>
-      <div id="album-<%= album.id %>">
+      <div id="album-<%= album.id %>" class="d-flex justify-content-center align-items-center">
         <%= live_redirect to: Routes.album_show_spread_path(@socket, :show, album, :cover) do %>
           <%= img_tag album_cover_image_url(album.aifid), alt: "Album #{album.aifid}" %>
         <% end %>
