--- a/lib/aif_albums_web/live/album_live/show_spread.html.heex
+++ b/lib/aif_albums_web/live/album_live/show_spread.html.heex
@@ -66,18 +66,18 @@
 
       <div>
         <%= if @current_album_spread.inscriptions != nil do %>
-          <h4>>Inscriptions:</dt>
+          <h4>>Inscriptions:</h4>
           <p><%= @current_album_spread.inscriptions %> cm</p>
         <% end %>
         <%= if @current_album_spread.height != nil do %>
-          <h4>>Height:</dt>
+          <h4>>Height:</h4>
           <p><%= @current_album_spread.height %> cm</p>
         <% end %>
         <%= if @current_album_spread.width != nil do %>
-          <h4>>Width:</dt>
+          <h4>>Width:</h4>
           <p><%= @current_album_spread.width %> cm</p>
         <% end %>
-      </dl>
+      </div>
 
     <% end %>
   </div>
