--- a/lib/aif_albums_web/live/admin_live/album_live/form_component.html.heex
+++ b/lib/aif_albums_web/live/admin_live/album_live/form_component.html.heex
@@ -1,6 +1,6 @@
-<h2><%= @title %></h2>
+<h2>{@title}</h2>
 
-<%= f = form_for @changeset, "#",
+<.form let={f} for{@changeset}, "#",
   id: "album-form",
   phx_target: @myself,
   phx_change: "validate",
@@ -49,4 +49,4 @@
   <%= input f, :city, group_class: "my-3" %>
 
   <%= submit "Save", phx_disable_with: "Saving...", class: "btn btn-primary" %>
-</form>
+</.form>
