--- a/lib/aif_albums_web/live/admin_live/album_spread_live/form_component.html.heex
+++ b/lib/aif_albums_web/live/admin_live/album_spread_live/form_component.html.heex
@@ -1,6 +1,6 @@
-<h2><%= @title %></h2>
+<h2>{@title}</h2>
 
-<%= f = form_for @changeset, "#",
+<.form let={f} for={@changeset}, "#",
   id: "album_spread-form",
   phx_target: @myself,
   phx_change: "validate",
@@ -27,4 +27,4 @@
       input_opts: [placeholder: "Inscriptions"] %>
 
   <%= submit "Save", phx_disable_with: "Saving...", class: "btn btn-primary mt-3" %>
-</form>
+</.form>
