--- a/lib/aif_albums_web/live/admin_live/collection_live/form_component.html.heex
+++ b/lib/aif_albums_web/live/admin_live/collection_live/form_component.html.heex
@@ -1,11 +1,7 @@
 <h2>{@title}</h2>
 
-<.form let={f} for={@changeset}, "#",
-      id: "collection-form",
-      phx_target: @myself,
-      phx_change: "validate",
-      novalidate: true,
-      phx_submit: "save" %>
+<.form let={f} for={@changeset} id="collection-form" phx_target={@myself} phx_change="validate"
+            novalidate="true" phx_submit="save">
 
       <%= input f, :aifid, group_class: "my-3", label: "Number",
             input_opts: [placeholder: "Collection number"] %>
