--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -2,7 +2,7 @@
 /* @import "./phoenix.css"; */
 
 @import "bootstrap_overrides";
-@import "~bootstrap/scss/bootstrap";
+@import "../node_modules/bootstrap/scss/bootstrap";
 
 @import "admin/base";
 
@@ -12,7 +12,7 @@
 @import "partials/footer";
 @import "partials/albums";
 @import "partials/collections_index";
-@import "partials/collections_show";
+@import "./partials/_collections_show";
 
 /* LiveView specific classes for your customizations */
 .phx-no-feedback.invalid-feedback,
