--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -12,7 +12,7 @@
 @import "partials/footer";
 @import "partials/albums";
 @import "partials/collections_index";
-@import "./partials/_collections_show";
+@import "partials/collections_show";
 
 /* LiveView specific classes for your customizations */
 .phx-no-feedback.invalid-feedback,
