--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -6,6 +6,7 @@
 
 @import "admin/base";
 
+@import "partials/animations";
 @import "partials/layout";
 @import "partials/modal";
 @import "partials/navigation";
