--- a/lib/aif_albums_web/live/album_live/album_spread_component.html.heex
+++ b/lib/aif_albums_web/live/album_live/album_spread_component.html.heex
@@ -1,5 +1,23 @@
 <div>
-  <%= img_tag album_spread_image_url(@album.aifid, @current_album_spread.aifid),
+  <%= img_tag album_spread_image_url(@album_aifid, @album_spread_aifid),
+      id: "spread-image",
+      class: "fade-in-image",
       style: "max-width: 100%; max-height: 75vh;",
-      alt: "Album spread #{@current_album_spread.aifid}" %>
+      alt: "Album spread #{@album_spread_aifid}" %>
+
+  <div class="align-self-center">
+    <%= if @next_spread_id != nil do %>
+      <div 
+        id="next-spread"
+      >
+        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
+          <path fill-rule="evenop" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+        </svg>
+      </div>
+    <% else %>
+      <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
+        <path fill-rule="evenop" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+      </svg>
+    <% end %> 
+  </div>
 </div>
