Fix inscription display

--- a/lib/aif_albums_web/live/album_live/show_spread.html.heex
+++ b/lib/aif_albums_web/live/album_live/show_spread.html.heex
@@ -66,8 +66,8 @@
 
       <div>
         <%= if @current_album_spread.inscriptions != nil do %>
-          <h4>>Inscriptions:</h4>
-          <p><%= @current_album_spread.inscriptions %> cm</p>
+          <h4>Inscriptions:</h4>
+          <p><%= @current_album_spread.inscriptions %></p>
         <% end %>
         <%= if @current_album_spread.height != nil do %>
           <h4>>Height:</h4>
