--- a/lib/aif_albums_web/live/admin_live/album_live/form_component.html.heex
+++ b/lib/aif_albums_web/live/admin_live/album_live/form_component.html.heex
@@ -1,8 +1,12 @@
 <div>
     <h2><%= @title %></h2>
 
-    <.form let={f} for={@changeset} id="album-form" phx_change="validate"
-            novalidate="true" phx_submit="save">
+    <.form let={f} for={@changeset} 
+            id="album-form" 
+            phx_target={@myself} 
+            phx_change="validate"
+            novalidate="true" 
+            phx_submit="save">
 
     <%= input f, :aifid, group_class: "my-3", label: "Number",
         input_opts: [placeholder: "Album number"] %>
