--- a/lib/aif_albums_web/templates/layout/root.html.heex
+++ b/lib/aif_albums_web/templates/layout/root.html.heex
@@ -11,7 +11,7 @@
     <script defer phx-track-static type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}></script>
   </head>
   <body>
-    <%= render "_navbar.html", conn: @conn %>
+    <%= render "_navbar.html", conn: @conn, current_user: @current_user %>
     <%= @inner_content %>
     <%= render "_footer.html", conn: @conn %>
   </body>
