Update intro text on landing page

--- a/lib/aif_albums_web/live/page_live.html.heex
+++ b/lib/aif_albums_web/live/page_live.html.heex
@@ -1,12 +1,30 @@
-<div id="homepage" class="row justify-content-md-center mt-5">
-  <div class="col col-md-9 col-lg-8 pb-4">
+<div id="homepage" class="row justify-content-md-center mt-3">
+  <div class="col pb-4">
     <h1>Albums Project</h1>
     <p>
-      The Arab Image Foundation was awarded a grant by the Hillman Family Foundation to 
-      carry out the physical and digital preservation on the 44 albums. The aim was to apply
-      the newly revised cataloguing and referencing system so as to relate the photographs
-      and pages as objects inside the album, build custom-made boxes of appropriate sizes 
-      for each of the abums, and lastly to digitize the albums and make them available online.
+      The Arab Image Foundation is the custodian of 44 photographic albums from Lebanon, 
+      Jordan, Iraq, and Egypt, spanning the 1900s to the 1970s. Thanks to crucial support 
+      from the William Talbott Hillman Foundation, we are excited to share these gems online.
+    </p>
+    <p>
+      The albums as photographic objects call for a tailored approach in cataloguing, rehousing, 
+      digitising, and documentation. The challenge is how to make these digital reproductions 
+      available online similar to the physical experience of viewing an album. Each album has a 
+      specific materiality, which is inherent to the object itself, but which may also be integral 
+      within a larger collection along with other photographic items. 
+    </p>
+    <p>
+      In thinking about how to translate and transpose the materiality online, the intention is 
+      to create the experience of going through an album; a physical gesture specific to this 
+      particular format.  Minimal information on each album contains the name, dimensions, and 
+      inscription; leaving space for an intimate user experience without the burden of 
+      didacticism, while keeping the content easily searchable.
+    </p>
+    <p>
+      This is one of many examples where replicating physicality on a screen inevitably 
+      compromises its original form, feel and functionality. To be able to share widely and 
+      virtually, perhaps we need to live with the reality of not being able to fully transpose 
+      what is irreplicable.
     </p>
   </div>
   <div class="albums-grid">
